--- a/sass/libs/skeleton/skeleton.scss
+++ b/sass/libs/skeleton/skeleton.scss
@@ -28,14 +28,14 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @import 'grid';
 @import 'base';
-@import 'typography';
-@import 'links';
-@import 'buttons';
+// @import 'typography';
+// @import 'links';
+// @import 'buttons';
 @import 'forms';
 @import 'lists';
-@import 'code';
+// @import 'code';
 @import 'tables';
 @import 'spacing';
 @import 'utilities';
 @import 'clearing';
-@import 'media-queries';
+// @import 'media-queries';
