--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -2,7 +2,8 @@
 # Typography
 --------------------------------------------------------------*/
 
-@import url("https://use.typekit.net/lvq2tjh.css");
+// Import proxima-nova from Adobe
+@import url("https://use.typekit.net/wws1hcf.css");
 
 h1,
 h2,
@@ -10,44 +11,73 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 600;
-}
-
-h1 {
-  font-size: 3rem;
-}
-
-h2 {
-  font-size: 2.4rem;
-}
-
-p,
-ul {
-  overflow-wrap: break-word;
-  font-size: 1.4rem;
-  line-height: 2.8rem;
+  margin-top: 0;
+  margin-bottom: 2rem;
   font-weight: 300;
 }
 
-li {
-  line-height: 2.2rem;
+h1 {
+  font-size: 3.6rem;
+  line-height: 1.2;
+  letter-spacing: -0.1rem;
+}
+h2 {
+  font-size: 2.5rem;
+  line-height: 1.25;
+  letter-spacing: -0.1rem;
+}
+h3 {
+  font-size: 3rem;
+  line-height: 1.3;
+  letter-spacing: -0.1rem;
+}
+h4 {
+  font-size: 2.4rem;
+  line-height: 1.35;
+  letter-spacing: -0.08rem;
+}
+h5 {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  letter-spacing: -0.05rem;
+}
+h6 {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  letter-spacing: 0;
+}
+p {
+  margin-top: 0;
+  font-size: 1.6rem;
 }
 
-a {
-  text-decoration: underline;
-  font-weight: 600;
-  color: #000;
+/* Larger than phablet */
+@media (min-width: 576px) {
+  h1 {
+    font-size: 5rem;
+  }
+  h2 {
+    font-size: 4.2rem;
+  }
+  h3 {
+    font-size: 3.6rem;
+  }
+  h4 {
+    font-size: 3rem;
+  }
+  h5 {
+    font-size: 2.4rem;
+  }
+  h6 {
+    font-size: 1.5rem;
+  }
 }
 
-/*--------------------------------------------------------------
-# General Elements
---------------------------------------------------------------*/
-
-section {
-  display: flex;
-  flex-direction: column;
+p {
+  margin-top: 0;
 }
 
-img {
-  max-width: 100%;
+body {
+  font-family: "proxima-nova", sans-serif, "HelveticaNeue", "Helvetica Neue",
+    Helvetica, Arial;
 }
