--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -5,11 +5,54 @@
 .hero {
   text-align: center;
 
+  &__clouds {
+    background-color: var(--sky-light);
+
+    div {
+      width: 200px;
+      height: 200px;
+      background-image: url("images/cloud-1.svg");
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      position: relative;
+      animation: left-to-right 10s linear 1s infinite;
+      overflow: hidden;
+
+      @keyframes left-to-right {
+        0% {
+          // background-color: red;
+          left: 0px;
+          top: 0px;
+        }
+        // 50% {
+        //   // background-color: yellow;
+        //   left: 100%;
+        //   top: 0px;
+        // }
+        100% {
+          // background-color: red;
+          left: 100%;
+          top: 0px;
+        }
+      }
+    }
+  }
+
   &__title {
     @extend %flex-column;
     justify-content: center;
-    min-height: 30vh;
+    align-items: center;
+    padding-top: 33px;
     background: var(--bg-sky);
+
+    @include desktop {
+      padding-top: 125px;
+      h1 {
+        font-size: 9.9rem;
+      }
+    }
+
     h1,
     p {
       color: var(--blue);
@@ -18,22 +61,41 @@
   }
 
   &__banner {
-    background: var(--sky-dark) url("images/hills.png");
+    background: var(--sky-dark) url("images/hills.png") bottom no-repeat;
+    background-size: 100% auto;
 
-    img {
-      max-width: 250px;
-      margin-top: -15%;
-      margin-bottom: 5%;
+    .row {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 
   &__content {
+    .row {
+      @extend %flex-column;
+      align-items: center;
+    }
     color: #fff;
     background-color: var(--green);
+    h3 {
+      font-weight: bold;
+    }
   }
 
   &__form {
     @extend %flex-column;
+
+    @include desktop {
+      flex-direction: row;
+      justify-content: space-between;
+
+      & * {
+        @include margin-x(10px);
+        width: calc(100% - 10px);
+      }
+    }
+
     button {
       border: 6px solid #ffffff;
       border-radius: 16px;
