--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -45,18 +45,20 @@
     align-items: center;
     padding-top: 33px;
     background: var(--bg-sky);
+    h1,
+    p {
+      color: var(--blue);
+      font-weight: bold;
+    }
 
     @include desktop {
       padding-top: 125px;
       h1 {
         font-size: 9.9rem;
       }
-    }
-
-    h1,
-    p {
-      color: var(--blue);
-      font-weight: bold;
+      p {
+        font-size: 2.8rem;
+      }
     }
   }
 
@@ -73,6 +75,7 @@
 
   &__content {
     .row {
+      @include margin-y(3rem);
       @extend %flex-column;
       align-items: center;
     }
@@ -81,14 +84,21 @@
     h3 {
       font-weight: bold;
     }
+
+    @include desktop {
+      p {
+        font-size: 2.6rem;
+      }
+    }
   }
 
-  &__form {
+  &__form {    
     @extend %flex-column;
 
     @include desktop {
       flex-direction: row;
       justify-content: space-between;
+      margin-bottom: 10rem;
 
       & * {
         @include margin-x(10px);
