--- a/sass/mm-theme/base/_media-queries.scss
+++ b/sass/mm-theme/base/_media-queries.scss
@@ -9,28 +9,29 @@ there.
 
 // HOW TO USE IT
 // .my-box {
-//   @include for-desktop-up {
+//   @include mobile {
 //     padding: 20px;
 //   }
 // }
 
-// Small devices (landscape phones, 576px and up)
+/* Mobile first queries */
+// Small devices (landscape phones, 550px and up)
 @mixin mobile {
-  @media (max-width: 576px) {
+  @media (max-width: 550px) {
     @content;
   }
 }
 
-// Medium devices (tablets, 768px and up)
+// Medium devices (tablets, 750px and up)
 @mixin tablet {
-  @media (min-width: 768px) {
+  @media (min-width: 750px) {
     @content;
   }
 }
 
-// Large devices (desktops, 992px and up)
+// Large devices (desktops, 1000px and up)
 @mixin desktop {
-  @media (min-width: 992px) {
+  @media (min-width: 1000px) {
     @content;
   }
 }
