--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -82,6 +82,7 @@ a {
 }
 
 body {
+  min-height: 100%;
   font-family: "proxima-nova", sans-serif, "HelveticaNeue", "Helvetica Neue",
     Helvetica, Arial;
 }
