--- a/sass/mm-theme/base/_scaffolding.scss
+++ b/sass/mm-theme/base/_scaffolding.scss
@@ -2,6 +2,20 @@
 # Global Elements
 --------------------------------------------------------------*/
 
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.site {
+  display: contents;
+}
+
+.site-content {
+  flex: 1;
+}
+
 section {
   display: flex;
   flex-direction: column;
