--- a/sass/mm-theme/base/_footer.scss
+++ b/sass/mm-theme/base/_footer.scss
@@ -3,7 +3,6 @@
 --------------------------------------------------------------*/
 
 .footer {
-  font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   font-size: 1.2rem;
   margin-top: 1rem;
@@ -30,6 +29,7 @@
 
   &__copyright {
     p {
+      font-size: 1.2rem;
       text-align: center;
     }
   }
@@ -53,6 +53,10 @@
 
     &__copyright {
       max-width: 50%;
+
+      p {
+        text-align: left;
+      }
       #copyright-text {
         display: none;
       }
@@ -73,11 +77,13 @@
           width: 40px;
         }
       }
-      @include mobile {
+      
+      @include mobile-only {
         &--actions {
           display: none;
         }
       }
+
     }
   }
 }
