--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -10,8 +10,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   margin: 0;
   font-weight: 300;
 }
@@ -19,32 +18,30 @@ p {
 h1 {
   font-size: 3.6rem;
   line-height: 1.2;
-  letter-spacing: -0.1rem;
+  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
+  Helvetica, Arial;
 }
 h2 {
   font-size: 2.5rem;
   line-height: 1.25;
-  letter-spacing: -0.1rem;
+  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
+  Helvetica, Arial;
 }
 h3 {
   font-size: 3rem;
   line-height: 1.3;
-  letter-spacing: -0.1rem;
 }
 h4 {
   font-size: 2.4rem;
   line-height: 1.35;
-  letter-spacing: -0.08rem;
 }
 h5 {
   font-size: 1.8rem;
   line-height: 1.5;
-  letter-spacing: -0.05rem;
 }
 h6 {
   font-size: 1.5rem;
   line-height: 1.6;
-  letter-spacing: 0;
 }
 p {
   margin-top: 0;
@@ -74,7 +71,10 @@ p {
 }
 
 p {
-  margin-top: 0;
+  margin: 0;
+  color: #000;
+  font-weight: 300;
+  font-size: 1.4rem;
 }
 
 a {
@@ -83,6 +83,5 @@ a {
 
 body {
   min-height: 100%;
-  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
-    Helvetica, Arial;
+  font-family: Arial, Helvetica, sans-serif;
 }
