--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -10,12 +10,12 @@
 
   .moving {
     background-color: #fff;
-    padding: 0 8% 2%;
+    padding: 0 7% 2%;
 
     &__header {
       text-align: center;
       margin-bottom: 50px;
-      @include mobile {
+      @include phablet-only {
         img {
           display: none;
         }
@@ -29,7 +29,7 @@
 
       h1 {
         font-size: 2.6rem;
-        color: var(--blue);
+        color: var(--dark-blue);
         margin-top: 35px;
         margin-bottom: 20px;
       }
@@ -83,7 +83,7 @@
           margin-bottom: 17px;
         }
         h6 {
-          color: var(--blue);
+          color: #2F78CA;
           font-weight: 600;
           font-size: 1.4rem;
         }
