--- a/sass/mm-theme/base/_footer.scss
+++ b/sass/mm-theme/base/_footer.scss
@@ -2,44 +2,43 @@
 # Footer
 --------------------------------------------------------------*/
 
-$class-prefix: "custom-icon--";
-$sprite-image-url: "images/footer-accessibility-sprite.png";
-$sprite-grid-size: 24px;
+$class-prefix: 'btn--';
+$sprite-image-url: 'images/footer-accessibility-sprite.png';
+$sprite-grid-size: 26.4px;
 
 $icon-list: (
-    ("mail", 0, 0)
-    ("print", 1, 1)
-    ("font", 0, 2)
-    ("mail", 1, 0)
-    ("picture", 1, 1)
+  ('mail', 0, 0) 
+  ('print', 0, 1) 
+  ('font-small', 0, 2) 
+  ('font-reset', 0, 3)
+  ('font-big', 0, 4)
 );
 
 @mixin icon($row, $column) {
-    background-position: -$column*$sprite-grid-size -$row*$sprite-grid-size;
+  background-position: (-$column * $sprite-grid-size) (-$row * $sprite-grid-size);
+}
+
+@each $icon in $icon-list {
+  $name: nth($icon, 1);
+  $row: nth($icon, 2);
+  $column: nth($icon, 3);
+
+  .#{$class-prefix}#{$name} {
+    @include icon($row, $column);
+  }
 }
 
 [class*='#{$class-prefix}'] {
-    display: inline-block;
-    width: $sprite-grid-size;
-    height: $sprite-grid-size;
+  display: inline-block;
+  width: $sprite-grid-size;
+  height: $sprite-grid-size;
 
-    line-height: $sprite-grid-size;
+  line-height: $sprite-grid-size;
 
-    background-image: url(#{$sprite-image-url});
-    background-repeat: no-repeat;
+  background-image: url(#{$sprite-image-url});
+  background-repeat: no-repeat;
 }
 
-
-
-@each $icon in $icon-list {
-    $name: nth($icon, 1);
-    $row: nth($icon, 2);
-    $column: nth($icon, 3);
-
-    .#{$class-prefix}#{name} {
-        @include icon($row, $column);
-    }
-}
 
 .footer {
   width: 100%;
@@ -116,13 +115,12 @@ $icon-list: (
           width: 40px;
         }
       }
-      
+
       @include mobile-only {
         &--actions {
           display: none;
         }
       }
-
     }
   }
 }
