--- a/sass/libs/skeleton/skeleton.scss
+++ b/sass/libs/skeleton/skeleton.scss
@@ -26,16 +26,16 @@
 
 /* Imports
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-@import 'grid';
-@import 'base';
-@import 'typography';
-@import 'links';
-@import 'buttons';
-@import 'forms';
-@import 'lists';
-@import 'code';
-@import 'tables';
-@import 'spacing';
-@import 'utilities';
-@import 'clearing';
-@import 'media-queries';
+@import "grid";
+@import "base";
+// @import 'typography';
+// @import 'links';
+// @import 'buttons';
+@import "forms";
+@import "lists";
+// @import 'code';
+@import "tables";
+@import "spacing";
+@import "utilities";
+@import "clearing";
+// @import 'media-queries';
