--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -2,7 +2,8 @@
 # Typography
 --------------------------------------------------------------*/
 
-@import url("https://use.typekit.net/lvq2tjh.css");
+// Import proxima-nova from Adobe
+@import url("https://use.typekit.net/wws1hcf.css");
 
 h1,
 h2,
@@ -10,44 +11,77 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 600;
-}
-
-h1 {
-  font-size: 3rem;
-}
-
-h2 {
-  font-size: 2.4rem;
-}
-
-p,
-ul {
-  overflow-wrap: break-word;
-  font-size: 1.4rem;
-  line-height: 2.8rem;
+  margin: 0;
   font-weight: 300;
 }
 
-li {
-  line-height: 2.2rem;
+h1 {
+  font-size: 3.6rem;
+  line-height: 1.2;
+  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
+  Helvetica, Arial;
+}
+h2 {
+  font-size: 2.5rem;
+  line-height: 1.25;
+  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
+  Helvetica, Arial;
+}
+h3 {
+  font-size: 3rem;
+  line-height: 1.3;
+}
+h4 {
+  font-size: 2.4rem;
+  line-height: 1.35;
+}
+h5 {
+  font-size: 1.8rem;
+  line-height: 1.5;
+}
+h6 {
+  font-size: 1.5rem;
+  line-height: 1.6;
+}
+p {
+  margin-top: 0;
+  font-size: 1.6rem;
+}
+
+/* Larger than phablet */
+@media (min-width: 550px) {
+  h1 {
+    font-size: 5rem;
+  }
+  h2 {
+    font-size: 4.2rem;
+  }
+  h3 {
+    font-size: 3.6rem;
+  }
+  h4 {
+    font-size: 3rem;
+  }
+  h5 {
+    font-size: 2.4rem;
+  }
+  h6 {
+    font-size: 1.5rem;
+  }
+}
+
+p {
+  margin: 0;
+  color: #000;
+  font-weight: 300;
+  font-size: 1.4rem;
 }
 
 a {
-  text-decoration: underline;
-  font-weight: 600;
   color: #000;
 }
 
-/*--------------------------------------------------------------
-# General Elements
---------------------------------------------------------------*/
-
-section {
-  display: flex;
-  flex-direction: column;
-}
-
-img {
-  max-width: 100%;
+body {
+  min-height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
