--- a/sass/mm-theme/base/_variables.scss
+++ b/sass/mm-theme/base/_variables.scss
@@ -4,6 +4,7 @@
 
 :root {
   --blue: #0a6aae;
+  --dark-blue: #003867;
   --grey: #484848;
   --orange: #f7941f;
   --green: #8cc73f;
@@ -12,12 +13,11 @@
   --bg-sky: linear-gradient(180deg, var(--sky-light) 0%, var(--sky-dark) 100%);
 }
 
+// Mixins
 %flex-column {
   display: flex;
   flex-direction: column;
 }
-
-// Mixins
 
 // x - for classes that set both *-left and *-right
 @mixin margin-x($margin) {
@@ -25,8 +25,18 @@
   margin-right: $margin;
 }
 
+@mixin padding-x($padding) {
+  padding-left: $padding;
+  padding-right: $padding;
+}
+
 // y - for classes that set both *-top and *-bottom
 @mixin margin-y($margin) {
   margin-top: $margin;
   margin-bottom: $margin;
+}
+
+@mixin padding-y($padding) {
+  padding-top: $padding;
+  padding-bottom: $padding;
 }
