--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -2,42 +2,100 @@
 # Front Page
 --------------------------------------------------------------*/
 
-.hero {
-  text-align: center;
+#front-page {
+  background-image: url(images/front-page/bg-bubbles.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 80vh;
 
-  &__title {
-    @extend %flex-column;
-    justify-content: center;
-    min-height: 30vh;
-    background: var(--bg-sky);
-    h1,
-    p {
-      color: var(--blue);
-      font-weight: bold;
+  .moving {
+    background-color: #fff;
+    padding: 0 7% 2%;
+
+    &__header {
+      text-align: center;
+      margin-bottom: 50px;
+      @include phablet-only {
+        img {
+          display: none;
+        }
+      }
+
+      img {
+        width: 246px;
+        height: auto;
+        margin-top: 50px;
+      }
+
+      h1 {
+        font-size: 2.6rem;
+        color: var(--dark-blue);
+        margin-top: 35px;
+        margin-bottom: 20px;
+      }
+
+      p {
+        font-size: 1.4rem;
+      }
+    }
+
+    .resources h2 {
+      color: #a1000d;
+      background-color: #ffc7cd;
+    }
+    .schools h2 {
+      color: #573476;
+      background-color: #e5cefa;
+    }
+    .sports h2 {
+      color: #003867;
+      background-color: #cceffc;
+    }
+
+    .card {
+      &__title {
+        h2 {
+          font-size: 1.8rem;
+          text-align: center;
+          @include padding-y(18px);
+
+          @include tablet {
+            text-align: left;
+          }
+        }
+
+        img {
+          @extend .u-full-width;
+          margin-bottom: 2.3rem;
+        }
+      }
+
+      @include tablet {
+        padding-left: 0;
+        h2 {
+          padding-left: 2.1rem;
+        }
+      }
+
+      &__content {
+        font-family: Arial, Helvetica, sans-serif;
+        div {
+          margin-bottom: 17px;
+        }
+        h6 {
+          color: #2F78CA;
+          font-weight: 600;
+          font-size: 1.4rem;
+        }
+      }
     }
   }
 
-  &__banner {
-    background: var(--sky-dark) url("images/hills.png");
-
-    img {
-      max-width: 250px;
-      margin-top: -15%;
-      margin-bottom: 5%;
-    }
-  }
-
-  &__content {
-    color: #fff;
-    background-color: var(--green);
-  }
-
-  &__form {
-    @extend %flex-column;
-    button {
-      border: 6px solid #ffffff;
-      border-radius: 16px;
-      background-color: var(--orange);
+  @media (min-width: 400px) {
+    @include padding-y(3%);
+    .moving {
+      border-radius: 1rem;
+      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3);
     }
   }
 }
