--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,35 +28,35 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 #### Front Page
 --------------------------------------------------------------*/
 
-@import "../node_modules/normalize.css/normalize";
-@import "libs/skeleton/skeleton.scss";
+@import '../node_modules/normalize.css/normalize';
+@import 'libs/skeleton/skeleton.scss';
 
 /*--------------------------------------------------------------
 # Munch & Move Theme
 --------------------------------------------------------------*/
-@import "mm-theme/base/variables";
+@import 'mm-theme/base/variables';
 
 /*--------------------------------------------------------------
 # General Styles
 --------------------------------------------------------------*/
-@import "mm-theme/base/typography";
-@import "mm-theme/base/scaffolding";
-@import "mm-theme/base/header";
+@import 'mm-theme/base/typography';
+@import 'mm-theme/base/scaffolding';
+@import 'mm-theme/base/header';
 
 /*--------------------------------------------------------------
 # Overwrites Skeleton Framework
 --------------------------------------------------------------*/
-@import "mm-theme/base/buttons";
-@import "mm-theme/base/forms";
-@import "mm-theme/base/media-queries";
+@import 'mm-theme/base/buttons';
+@import 'mm-theme/base/forms';
+@import 'mm-theme/base/media-queries';
 
 /*--------------------------------------------------------------
 # Pages
 --------------------------------------------------------------*/
-@import "mm-theme/pages/front-page";
-@import "mm-theme/pages/single-page";
+@import 'mm-theme/pages/front-page';
+@import 'mm-theme/pages/single-page';
 
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-@import "mm-theme/base/footer";
+@import 'mm-theme/base/footer';
