--- a/sass/mm-theme/base/_buttons.scss
+++ b/sass/mm-theme/base/_buttons.scss
@@ -3,9 +3,9 @@
 
 .button,
 button,
-input[type="submit"],
-input[type="reset"],
-input[type="button"] {
+input[type='submit'],
+input[type='reset'],
+input[type='button'] {
   display: inline-block;
   height: 61px;
   border-radius: 16px;
@@ -19,14 +19,14 @@ input[type="button"] {
 
 .button:hover,
 button:hover,
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
+input[type='submit']:hover,
+input[type='reset']:hover,
+input[type='button']:hover,
 .button:focus,
 button:focus,
-input[type="submit"]:focus,
-input[type="reset"]:focus,
-input[type="button"]:focus {
+input[type='submit']:focus,
+input[type='reset']:focus,
+input[type='button']:focus {
   color: #fff;
   border-color: #fff;
   box-shadow: 2px 2px 5px var(--grey);
