--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 // Import proxima-nova from Adobe
-@import url("https://use.typekit.net/wws1hcf.css");
+@import url('https://use.typekit.net/wws1hcf.css');
 
 h1,
 h2,
@@ -18,14 +18,14 @@ h6 {
 h1 {
   font-size: 3.6rem;
   line-height: 1.2;
-  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
-  Helvetica, Arial;
+  font-family: Georgia, serif, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
+    Helvetica, Arial;
 }
 h2 {
   font-size: 2.5rem;
   line-height: 1.25;
-  font-family: Georgia, serif, sans-serif, "HelveticaNeue", "Helvetica Neue",
-  Helvetica, Arial;
+  font-family: Georgia, serif, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
+    Helvetica, Arial;
 }
 h3 {
   font-size: 3rem;
