--- a/sass/mm-theme/pages/_front-page.scss
+++ b/sass/mm-theme/pages/_front-page.scss
@@ -83,7 +83,7 @@
           margin-bottom: 17px;
         }
         h6 {
-          color: #2F78CA;
+          color: #2f78ca;
           font-weight: 600;
           font-size: 1.4rem;
         }
