fix: template style

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,6 +55,7 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 --------------------------------------------------------------*/
 @import 'mm-theme/pages/front-page';
 @import 'mm-theme/pages/single-page';
+@import 'mm-theme/pages/content-page';
 
 /*--------------------------------------------------------------
 # Footer
