--- a/sass/mm-theme/base/_scaffolding.scss
+++ b/sass/mm-theme/base/_scaffolding.scss
@@ -16,3 +16,11 @@ section {
 img {
   max-width: 100%;
 }
+
+.grid__2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
