--- a/sass/mm-theme/base/_media-queries.scss
+++ b/sass/mm-theme/base/_media-queries.scss
@@ -71,3 +71,28 @@ there.
     @content;
   }
 }
+
+/* Mobile Menu */
+.mobile-menu {
+  display: none;
+}
+
+@media only screen and (min-width: 800px) {
+  .desktop-menu {
+    display: block !important;
+  }
+
+  .mobile-menu {
+    display: none !important;
+  }
+}
+
+@media only screen and (max-width: 799px) {
+  .desktop-menu {
+    display: none !important;
+  }
+
+  .mobile-menu {
+    display: block !important;
+  }
+}
