--- a/sass/mm-theme/base/_variables.scss
+++ b/sass/mm-theme/base/_variables.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 :root {
-  --blue: #0a6aae;
+  --blue: #0a73b7;
   --dark-blue: #003867;
   --grey: #484848;
   --orange: #f7941f;
