--- a/sass/libs/skeleton/_base.scss
+++ b/sass/libs/skeleton/_base.scss
@@ -10,7 +10,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: 'Raleway', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial,
-    sans-serif;
+  font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
+  Helvetica, Arial;
   color: #222;
 }
