--- a/sass/mm-theme/base/_typography.scss
+++ b/sass/mm-theme/base/_typography.scss
@@ -13,19 +13,17 @@ h5,
 h6 {
   margin: 0;
   font-weight: 300;
+  font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
+  Helvetica, Arial;
 }
 
 h1 {
   font-size: 3.6rem;
   line-height: 1.2;
-  font-family: Georgia, serif, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
-    Helvetica, Arial;
 }
 h2 {
   font-size: 2.5rem;
   line-height: 1.25;
-  font-family: Georgia, serif, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
-    Helvetica, Arial;
 }
 h3 {
   font-size: 3rem;
@@ -77,11 +75,35 @@ p {
   font-size: 1.4rem;
 }
 
+/* Links
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #000;
+  color: var(--blue);
+  text-decoration: none;
 }
+a:hover {
+  color: var(--dark-blue);
+  text-decoration: underline;
+}
+
+/* Base Styles
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+// /* NOTE
+// html is set to 62.5% so that all the REM measurements throughout Skeleton
+// are based on 10px sizing. So basically 1.5rem = 15px :) */
+// html {
+//   font-size: 62.5%;
+// }
+// body {
+//   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
+//   line-height: 1.6;
+//   font-weight: 400;
+//   font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
+//   Helvetica, Arial;
+//   color: #222;
+// }
 
 body {
   min-height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: proxima-nova, sans-serif, 'HelveticaNeue', 'Helvetica Neue',
 }
