--- a/sass/mm-theme/base/_header.scss
+++ b/sass/mm-theme/base/_header.scss
@@ -2,6 +2,12 @@
 # Header
 --------------------------------------------------------------*/
 
+.nav-header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 @media (min-width: 550px) {
   .site-branding {
     display: none;
@@ -22,18 +28,25 @@
 }
 
 .page-header {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2.5rem;
+  background: var(--sky-dark) url('images/hills.png') bottom no-repeat;
+  background-size: 100% auto;
 
+  .container {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 2.5rem;
+  }
   &::after {
     content: none;
   }
 }
 
 .navbar {
-  border: 1px solid var(--grey);
   @include margin-y(10px);
+  text-transform: uppercase;
+  a {
+    color: #fff;
+  }
 
   #primary-menu {
     display: flex;
